--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "load-gulp-tasks": "^0.1.0"
+  },
+  "dependencies": {
+    "bootstrap": "^3.3.7"
   }
 }
