--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-less": "^3.3.0",
     "load-gulp-tasks": "^0.1.0"
   },
   "dependencies": {
